[package]
name = "blog-alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.1", features = ["inline", "rayon"] }
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
